--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div>
       <h4>About Me</h4>
       
-      <p>I am a undergraduate student at <a href="https://www.cmi.ac.in/" target="_blank">Chennai Mathematical Institute</a> doing BSc (Honours) in Mathematics and Computer Science. My primary area of interest is number theory. Here's my <a href="CV.pdf" target="_blank">CV</a>.</p>
+      <p>I am a undergraduate student at <a href="https://www.cmi.ac.in/" target="_blank">Chennai Mathematical Institute</a> doing BSc (Honours) in Mathematics and Computer Science. My primary area of interest is number theory. Here's my <a href="Eshan_Resume.pdf" target="_blank">CV</a>.</p>
 </div>
 
 <!--
