--- a/index.html
+++ b/index.html
@@ -37,23 +37,16 @@
       <p>I am a undergraduate student at <a href="https://www.cmi.ac.in/" target="_blank">Chennai Mathematical Institute</a> doing BSc (Honours) in Mathematics and Computer Science. My primary area of interest is number theory. Here's my <a href="Eshan_Resume.pdf" target="_blank">CV</a>.</p>
 </div>
 
-<!--
+
 <hr class="divider" />
 
 
 <div>
-      <h4>Publications</h4>
+      <h4>Notes</h4>
       
      <div class="paper">
-          <p class="title"><a href="" target="_blank"><b>This Is the Name of a Paper</b></a></i></p>
-          <p>with Coauthor One, Coauthor Two, and Coauthor Three.</p>
-          <p>In Alice Bob Charlie <b>(ABC 2020)</b>.</p>
-     </div> 
-     
-     <div class="paper">
-          <p class="title"><a href="" target="_blank"><b>Look I Have Another Paper</b></a></p>
-          <p>with Coauthor Four and Coauthor Five.</p>
-          <p>In Xylophone Yemen Zoo <b>(Zoo 2015)</b>.</p>
+          <p class="title"><a href="NT_INMOTC.pdf" target="_blank"><b>Number Theory problems</b></a></i></p>
+          <p>Handout prepared for INMOTC, Chennai on Number theory</p>
      </div> 
 
 
@@ -61,6 +54,7 @@
 
 </div>       
 
+<!--
 <hr class="divider" />
 
 <div>
